testsuite/tests/hidden_includes/hidden_stays_hidden.ocamlc.reference
File "libc/c4.ml", line 2, characters 8-11:
2 | let y = A.x + 1
            ^^^
Error: Unbound module A
